--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,22 +122,22 @@
   font-family: "Shrikhand", cursive;
   display: flex;
   justify-content: flex-start;
+  font-size: 1.2em;
 }
 
 .sous_titres_menus {
   font-family: "Roboto", sans-serif;
   font-weight: lighter;
   text-transform: uppercase;
-  font-size: 3em;
+  font-size: 1em;
   border-bottom: 5px #99E2D0 solid;
   width: 2.2em;
 }
 
 .coeur_menu {
-  font-size: 4em;
-  position: relative;
-  top: -1.5em;
-  left: 20em;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .bulles_menu {
@@ -149,23 +149,33 @@
 }
 
 .titre_bulle_menu {
-  font-size: 3.5em;
+  font-size: 1em;
   margin-top: 0em;
+  width: 80%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .texte_bulle_menu {
-  font-size: 3em;
+  font-size: 0.9em;
   font-weight: lighter;
   margin-top: 0em;
+  width: 80%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .prix {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
-  font-size: 3em;
+  font-size: 1em;
   display: flex;
   justify-content: flex-end;
   padding-right: 1.5em;
+  position: relative;
+  top: 1.8em;
 }
 
 .prix:nth-child(3) {
@@ -175,7 +185,7 @@
 .bouton_menus {
   display: flex;
   justify-content: center;
-  margin-top: 10em;
+  margin-top: 5em;
 }
 
 h1, h2 {
@@ -202,7 +212,7 @@ p {
 }
 
 #logo {
-  width: 37em;
+  width: 20%;
   margin-top: 3em;
   margin-bottom: 3em;
 }
@@ -369,12 +379,11 @@ figcaption {
   background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 900;
-  font-size: 4em;
+  font-size: 1.5em;
   display: flex;
   justify-content: flex-end;
-  margin-top: -155px;
+  margin-top: -25px;
   position: relative;
-  right: 1.25em;
   opacity: 1;
   animation: slide_coeur 0.5s;
 }
@@ -401,12 +410,8 @@ figcaption {
 /*Footer*/
 footer {
   background-color: #353535;
-  /*
-  height: 12em;
-  width: 36em;
-  */
-  padding-left: 3em;
   padding-top: 1em;
+  padding-left: 1em;
   font-size: 2.5em;
 }
 footer ul {
@@ -424,36 +429,34 @@ footer ul li a {
 }
 
 #le_menu {
-  /*
-  width:89em;
-  height: 210em;
-  */
   background-color: #F6F6F6;
   padding-top: 1em;
   margin-top: -50px;
-  padding-left: 4em;
-  padding-right: 4em;
+  z-index: 1;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
   border-radius: 70px 70px 0px 0px;
 }
 
 .image_fond_menus {
-  /*
-  height:50em;
-  width: 97em;
-  */
+  height: 40em;
+  width: 100%;
   object-fit: cover;
+  z-index: -1;
 }
 
 .image_menu {
   width: 100%;
+  height: 33em;
   display: flex;
   justify-content: center;
 }
 
 .icons_menu {
-  font-size: 3em;
+  font-size: 1.5em;
   position: relative;
-  right: 8em;
+  right: 1em;
+  bottom: 0.1em;
 }
 
 a {
@@ -585,7 +588,9 @@ a {
 }
 
 .bulles_menu {
-  height: 14em;
+  height: 3em;
+  width: 92%;
+  padding-bottom: 1em;
   margin-bottom: 1em;
   overflow: hidden;
 }
@@ -595,19 +600,19 @@ a {
 .bulles_menu:hover .validation {
   border-radius: 0px 25px 25px 0px;
   background-color: #99E2D0;
-  width: 15em;
-  height: 15em;
+  width: 5em;
+  height: 5em;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  bottom: 15.5em;
-  left: 74em;
+  bottom: 2.5em;
+  left: 80%;
   animation: slide 1s;
 }
 .bulles_menu:hover .icon_validation {
   opacity: 1;
-  font-size: 4.5em;
+  font-size: 1.5em;
   color: white;
   display: flex;
   justify-content: center;
@@ -617,7 +622,10 @@ a {
   transition: transform 500ms ease-in-out;
 }
 .bulles_menu:hover .prix {
-  transform: translateX(-250px);
+  transform: translateX(-100px);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @keyframes slide {
@@ -657,90 +665,225 @@ a {
   position: relative;
 }
 
+body {
+  overflow-x: hidden;
+}
+
+h3 {
+  width: 99%;
+}
+
+.btn_menu {
+  width: 50%;
+  height: 2.9em;
+  font-family: "Roboto", sans-serif;
+  font-weight: light 300;
+  font-size: 1em;
+  margin-bottom: 5em;
+}
+
+.footer_menus {
+  width: 100%;
+}
+
 /*media queries*/
-/*desktop*/
-@media screen and (min-width: 1025px) and (max-width: 1700px) {
-  .bulle {
-    width: 70em;
-  }
-
-  .bulle_chiffre {
-    width: 3em;
-    height: 3em;
-  }
-
-  .contenaire_article {
+@media screen and (min-width: 423px) and (max-width: 1200px) {
+  .box_menu {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
   }
 
-  .coeur_box {
-    position: relative;
-    top: 1.5em;
+  #le_menu {
+    width: 25.5em;
   }
 }
-@media screen and (min-width: 1700px) and (max-width: 1999px) {
-  header {
-    width: 100%;
-  }
-
-  main {
-    width: 100%;
-  }
-
-  h2 {
-    width: 100%;
-  }
-
-  #section_fonctionnement {
-    width: 100%;
-  }
-
-  #section_restaurants {
-    width: 100%;
-  }
-
-  #contenaire_bulles {
-    width: 100%;
-  }
-
-  #contenaire_bulles {
+@media screen and (min-width: 1201px) and (max-width: 1600px) {
+  .box_menu {
     display: flex;
-    justify-content: space-around;
-  }
-
-  .contenaire_article {
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
   }
 
-  .coeur_box {
-    position: relative;
-    top: 1.5em;
+  #le_menu {
+    width: 40em;
   }
 
-  footer {
-    width: 93%;
-  }
-
-  .les_menus {
+  .bulles_menu:hover .validation {
+    border-radius: 0px 25px 25px 0px;
+    background-color: #99E2D0;
+    width: 5em;
+    height: 5em;
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 2.5em;
+    left: 86.5%;
+    animation: slide 1s;
+  }
+}
+@media screen and (min-width: 1601px) and (max-width: 2000px) {
+  .box_menu {
+    display: flex;
     justify-content: center;
   }
 
-  .coeur::before {
-    font-size: 0.8em;
-    position: relative;
-    top: 0.5em;
+  #le_menu {
+    width: 60em;
   }
 
-  .coeur_plein::before {
-    font-size: 0.8em;
-    margin-top: 0.5em;
+  .bulles_menu:hover .validation {
+    border-radius: 0px 25px 25px 0px;
+    background-color: #99E2D0;
+    width: 5em;
+    height: 5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 2.5em;
+    left: 91%;
+    animation: slide 1s;
   }
+}
+@media screen and (min-width: 2000px) {
+  .box_menu {
+    display: flex;
+    justify-content: center;
+  }
+
+  #le_menu {
+    width: 90em;
+  }
+
+  .bulles_menu:hover .validation {
+    border-radius: 0px 25px 25px 0px;
+    background-color: #99E2D0;
+    width: 8em;
+    height: 8em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 5.3em;
+    left: 91%;
+    animation: slide 1s;
+  }
+
+  .btn_menu {
+    width: 30%;
+    height: 2.5em;
+    font-family: "Roboto", sans-serif;
+    font-weight: light 300;
+    font-size: 2em;
+    margin-bottom: 5em;
+  }
+
+  .titres_des_menus {
+    font-size: 3em;
+  }
+
+  .sous_titres_menus {
+    font-size: 2em;
+  }
+
+  .prix {
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    font-size: 1.5em;
+  }
+
+  .titre_bulle_menu {
+    font-size: 1.5em;
+  }
+
+  .texte_bulle_menu {
+    font-size: 1.2em;
+  }
+
+  .bulles_menu {
+    height: 6em;
+  }
+}
+@media screen and (min-width: 3070px) {
+  .div_bulle {
+    width: 33.3%;
+  }
+}
+.footer_menus {
+  font-size: 1em;
+}
+
+/*desktop
+@media screen and (min-width : 1025px) and (max-width : 1700px){
+    .bulle{
+        width:70em;
+    }
+    .bulle_chiffre{
+        width: 3em;
+        height: 3em;
+    }
+    .contenaire_article{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .coeur_box{
+        position: relative;
+        top:1.5em;
+    }
+
+}
+@media screen and (min-width : 1700px) and (max-width : 1999px){
+    header{
+        width:100%;
+
+    }
+    main{
+        width:100%;
+    }
+    h2{
+        width:100%;
+    }
+    #section_fonctionnement{
+        width:100%;
+    }
+    #section_restaurants{
+        width: 100%;
+    }
+    #contenaire_bulles{
+        width: 100%;
+    }
+    #contenaire_bulles{
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .contenaire_article{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .coeur_box{
+        position: relative;
+        top:1.5em;
+    }
+    footer{
+        width:93%;
+    }
+    .les_menus{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .coeur::before{
+        font-size: 0.8em;
+        position: relative;
+        top:0.5em;
+    }
+    .coeur_plein::before{
+        font-size: 0.8em;
+        margin-top: 0.5em;
+    }
 }
 /*Ultra-width*/
 @media screen and (min-width: 2000px) and (max-width: 2810px) {
@@ -848,10 +991,6 @@ a {
   .coeur_box {
     position: relative;
     top: 1.5em;
-  }
-
-  footer {
-    width: 97.4%;
   }
 
   .les_menus {
