--- a/sass/Components/_selecteurs.scss
+++ b/sass/Components/_selecteurs.scss
@@ -103,43 +103,58 @@
     font-family: $police_titre_menu;
     display: flex;
     justify-content: flex-start;
+    font-size: 1.2em;
+    
     
 }
 .sous_titres_menus{
      font-family:'Roboto', sans-serif; 
      font-weight: lighter;
      text-transform: uppercase;
-     font-size: 3em;
+     font-size: 1em;
      
      border-bottom: 5px $couleur_tertiaire solid;
      width:2.2em;
 }
+
 .coeur_menu{
-    font-size: 4em;
-    position: relative;
-    top: -1.5em; left: 20em;
+    font-size: 1.5em;
+    display: flex;
+    justify-content: flex-end;
 }
+
 .bulles_menu{
     background-color: white;
     border-radius: 30px;
     padding-left: 1.5em;
     padding-top:1em;
     width:100%;
+    
 }
 .titre_bulle_menu{
-    font-size: 3.5em;
+    font-size: 1em;
     margin-top: 0em;
+    width:80%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .texte_bulle_menu{
-    font-size: 3em;
+    font-size: 0.9em;
     font-weight: lighter;
     margin-top: 0em;
+    width:80%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .prix{
-    @include typo-titres(3em);
+    @include typo-titres(1em);
     display: flex;
     justify-content: flex-end;
     padding-right: 1.5em;
+    position: relative;
+    top:1.8em;
     
 }
 .prix:nth-child(3){
@@ -148,5 +163,5 @@
 .bouton_menus{
     display: flex;
     justify-content: center;
-    margin-top: 10em;
+    margin-top: 5em;
 }
