--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,11 +2,10 @@
 @import "./utils/variables";
 @import "./Components/selecteurs";
 
-
-
     h1, h2{
         @include typo-titres(5em);
     }
+    
     h3{
         @include typo-titres(1.5em);
         margin-bottom: 0.5em;
@@ -21,10 +20,11 @@
     }
 
     #logo{
-        width: 37em;
+        width: 20%;
         margin-top: 3em;
         margin-bottom: 3em;
     }
+    
     .icons{
         font-size: 3.5em;
         padding: 0.5em;
@@ -87,9 +87,7 @@
      width: 100%;
      border-radius: 0px 0px 40px 40px;
      background-color: white;
-     padding-left: 1em;
-
-    
+     padding-left: 1em;    
     }
     /*Coeur avec animation*/
     .coeur_box{
@@ -152,12 +150,14 @@
             .coeur_plein_menu{
                 @include coeur;
                 font-weight: 900;
-                font-size: 4em;
+                font-size: 1.5em;
                 display: flex;
                 justify-content: flex-end;
-                margin-top: -155px;
+                margin-top: -25px;
+                
                 position: relative;
-                right:1.25em;
+                
+                
                 opacity: 1;
                 animation: slide_coeur 0.5s;
             }
@@ -184,12 +184,8 @@
     /*Footer*/
     footer{
         background-color: #353535;
-        /*
-        height: 12em;
-        width: 36em;
-        */
-        padding-left: 3em;
         padding-top: 1em;
+        padding-left: 1em;
         font-size: 2.5em;
         ul{
             list-style-type: none;
@@ -204,35 +200,35 @@
         }
     }
     #le_menu{
-        /*
-        width:89em;
-        height: 210em;
-        */
         background-color: $fond_gris;
         padding-top: 1em;
         margin-top: -50px;
-        padding-left: 4em;
-        padding-right: 4em;
+        z-index: 1;
+        padding-left: 1.5em;
+        padding-right: 1.5em;
         border-radius: 70px 70px 0px 0px;
+
     }
 
     .image_fond_menus{
-        /*
-        height:50em;
-        width: 97em;
-        */
+        height:40em;
+        width: 100%;
         object-fit: cover;
+        z-index: -1;
     }
     .image_menu{
         width: 100%;
+        height: 33em;
         display: flex;
         justify-content: center;
     }
     .icons_menu{
-        font-size: 3em;
+        font-size: 1.5em;
         position: relative;
-        right:8em;
+        right:1em;
+        bottom:0.1em;
     }
+    
     a{
         text-decoration: none;
         color: black;
@@ -371,7 +367,9 @@
 
        
         .bulles_menu{
-            height: 14em;
+            height: 3em;
+            width: 92%;
+            padding-bottom: 1em;
             margin-bottom: 1em;
             overflow: hidden;
                 .icon_validation{
@@ -381,18 +379,18 @@
                 .validation{ 
                         border-radius: 0px 25px 25px 0px;
                         background-color: $couleur_tertiaire;
-                        width: 15em;
-                        height: 15em;
+                        width: 5em;
+                        height: 5em;
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         position: relative;
-                        bottom:15.5em; left:74em; 
+                        bottom:2.5em; left:80%; 
                         animation: slide 1s;
                 }
                     .icon_validation{
                         opacity: 1;
-                        font-size: 4.5em;
+                        font-size: 1.5em;
                         color: white;
                         display: flex;
                         justify-content: center;
@@ -402,7 +400,11 @@
                         transition: transform 500ms ease-in-out;
                     }
                     .prix{
-                        transform: translateX(-250px);
+                        transform: translateX(-100px);
+                       
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                         
                     }
             }
@@ -444,13 +446,143 @@
         position:relative;
       }
 
-
-/*media queries*/
-@media screen and (min-width : 768px) and (max-width : 1024px){
-    
-  
+body{
+        overflow-x: hidden;
+        }
+h3{
+    width:99%;
 }
-/*desktop*/
+.btn_menu{
+    width: 50%;
+    height: 2.9em;
+    @include typo-footer(1em);
+    margin-bottom: 5em;
+}
+.footer_menus{
+    width: 100%;
+}
+/*media queries*/
+@media screen and (min-width : 423px) and (max-width : 1200px){
+    .box_menu{
+        display: flex;
+        justify-content: center;
+    }
+    #le_menu{
+        
+        width: 25.5em;
+    }
+    
+}
+@media screen and (min-width : 1201px) and (max-width : 1600px){
+    .box_menu{
+        display: flex;
+        justify-content: center;
+    }
+    #le_menu{
+        width: 40em;
+    }
+    .bulles_menu{
+        
+        &:hover{
+            .validation{ 
+                    border-radius: 0px 25px 25px 0px;
+                    background-color: $couleur_tertiaire;
+                    width: 5em;
+                    height: 5em;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: relative;
+                    bottom:2.5em; left:86.5%; 
+                    animation: slide 1s;
+            }
+        }
+}}
+@media screen and (min-width : 1601px) and (max-width : 2000px){
+    .box_menu{
+        display: flex;
+        justify-content: center;
+    }
+    #le_menu{
+        width: 60em;
+    }
+    .bulles_menu{
+        
+        &:hover{
+            .validation{ 
+                    border-radius: 0px 25px 25px 0px;
+                    background-color: $couleur_tertiaire;
+                    width: 5em;
+                    height: 5em;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: relative;
+                    bottom:2.5em; left:91%; 
+                    animation: slide 1s;
+            }
+        }
+}}
+@media screen and (min-width : 2000px){
+    .box_menu{
+        display: flex;
+        justify-content: center;
+    }
+    #le_menu{
+        width: 90em;
+    }
+    .bulles_menu{
+        
+        &:hover{
+            .validation{ 
+                    border-radius: 0px 25px 25px 0px;
+                    background-color: $couleur_tertiaire;
+                    width: 8em;
+                    height: 8em;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: relative;
+                    bottom:5.3em; left:91%; 
+                    animation: slide 1s;
+            }
+        }
+}
+.btn_menu{
+    width: 30%;
+    height: 2.5em;
+    @include typo-footer(2em);
+    margin-bottom: 5em;
+}
+.titres_des_menus{
+    font-size: 3em;
+}
+.sous_titres_menus{
+     font-size: 2em;
+}
+.prix{
+    @include typo-titres(1.5em);
+}
+.titre_bulle_menu{
+    font-size: 1.5em;
+}
+.texte_bulle_menu{
+    font-size: 1.2em;
+}
+.bulles_menu{
+    height: 6em;
+}
+}
+@media screen and (min-width : 3070px){
+    .div_bulle{
+        width:33.3%;
+    }
+    
+}
+.footer_menus{
+    font-size: 1em;
+}
+/*desktop
 @media screen and (min-width : 1025px) and (max-width : 1700px){
     .bulle{
         width:70em;
@@ -617,9 +749,7 @@
             position: relative;
             top:1.5em;
         }
-        footer{
-            width:97.4%;
-        }
+    
         .les_menus{
             display: flex;
             flex-wrap: wrap;
@@ -638,5 +768,6 @@
         #image_menu_un, #image_menu_deux,#image_menu_trois, #image_menu_quatre {
             width:70%;
         }
+        
     }
     
